--- a/src/main/webapp/views/adminPages/adminHtml/edit-invoices.html
+++ b/src/main/webapp/views/adminPages/adminHtml/edit-invoices.html
@@ -730,7 +730,7 @@ Zip code ,City - Country
 </div>
 <div class="col-lg-4 col-md-12">
 <div class="invoice-info invoice-info-one border-0">
-<p>Issue Date : 27 Jul 2022</p>
+<p>disease Date : 27 Jul 2022</p>
 <p>Due Date : 27 Aug 2022</p>
 <p>Due Amount : $ 1,54,22 </p>
 <p>Recurring Invoice : 15 Months</p>
